azuredeploy.json
{  
   "$schema":"https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
   "contentVersion":"1.0.0.0",
   "parameters":{  
      "jumpVirtualMachineName":{  
         "type":"string",
         "defaultValue":"JumpVM",
         "metadata":{  
            "description":"Name for the Virtual Machine."
         }
      },
      "powerBIVirtualMachineName":{  
         "type":"string",
         "defaultValue":"PowerBIVM",
         "metadata":{  
            "description":"Name of PowerBI VM"
         }
      },
      "adminUsername":{  
         "type":"string",
         "defaultValue":"Dbadmin",
         "metadata":{  
            "description":"Username for the Virtual Machine."
         }
      },
      "adminPassword":{  
         "type":"securestring",
         "metadata":{  
            "description":"Password for the Virtual Machine."
         }
      }
   },
   "variables":{  
      "jumpNicName":"[concat(parameters('jumpVirtualMachineName'), '-nic')]",
      "powerBINicName":"[concat(parameters('powerBIVirtualMachineName'), '-nic')]",
      "jumpPublicIPAddressName":"[concat('jumpvmpip', uniqueString(resourceGroup().id))]",
      "powerBIPublicIPAddressName":"[concat('powerbivmpip', uniqueString(resourceGroup().id))]",
      "nsgName":"nsg",
      "vmStorageAccountContainerName":"vhds",
      "virtualNetworkName":"vnet",
      "vnetID":"[resourceId('Microsoft.Network/virtualNetworks',variables('virtualNetworkName'))]",
      "subnetRef":"[concat(variables('vnetID'),'/subnets/','subnet')]",
      "storageAccountName":"[concat('storage',uniqueString(resourceGroup().id))]"
   },
   "resources":[  
      {  
         "type":"Microsoft.Storage/storageAccounts",
         "name":"[variables('storageAccountName')]",
         "apiVersion":"2016-01-01",
         "comments":"Storage Account",
         "location":"[resourceGroup().location]",
         "kind":"Storage",
         "sku":{  
            "name":"Standard_LRS"
         }
      },
      {  
         "apiVersion":"2017-04-01",
         "type":"Microsoft.Network/publicIPAddresses",
         "name":"[variables('jumpPublicIPAddressName')]",
         "comments":"JUmp VM Public IP name",
         "location":"[resourceGroup().location]",
         "properties":{  
            "publicIPAllocationMethod":"Dynamic",
            "dnsSettings":{  
               "domainNameLabel":"[variables('jumpPublicIPAddressName')]"
            }
         }
      },
      {  
         "apiVersion":"2016-03-30",
         "type":"Microsoft.Network/publicIPAddresses",
         "name":"[variables('powerBIPublicIPAddressName')]",
         "location":"[resourceGroup().location]",
         "comments":"PowerBI VM Public IP Address",
         "properties":{  
            "publicIPAllocationMethod":"Dynamic",
            "idleTimeoutInMinutes":4,
            "dnsSettings":{  
               "domainNameLabel":"[concat(variables('powerBIPublicIPAddressName'))]"
            }
         }
      },
      {  
         "type":"Microsoft.Network/networkSecurityGroups",
         "name":"[variables('nsgName')]",
         "apiVersion":"2016-03-30",
         "location":"[resourceGroup().location]",
         "comments":"NSG for Subnet",
         "properties":{  
            "securityRules":[  
               {  
                  "name":"SSH-allow",
                  "properties":{  
                     "protocol":"Tcp",
                     "sourcePortRange":"*",
                     "destinationPortRange":"22",
                     "sourceAddressPrefix":"Internet",
                     "destinationAddressPrefix":"10.0.0.0/16",
                     "access":"Allow",
                     "priority":110,
                     "direction":"Inbound"
                  }
               },
               {  
                  "name":"RDP-allow",
                  "properties":{  
                     "protocol":"Tcp",
                     "sourcePortRange":"*",
                     "destinationPortRange":"3389",
                     "sourceAddressPrefix":"Internet",
                     "destinationAddressPrefix":"10.0.0.0/16",
                     "access":"Allow",
                     "priority":120,
                     "direction":"Inbound"
                  }
               },
               {  
                  "name":"Nodejs-allow",
                  "properties":{  
                     "protocol":"Tcp",
                     "sourcePortRange":"*",
                     "destinationPortRange":"8080",
                     "destinationAddressPrefix":"10.0.0.0/16",
                     "sourceAddressPrefix":"Internet",
                     "access":"Allow",
                     "priority":130,
                     "direction":"Inbound"
                  }
               }
            ]
         }
      },
      {  
         "apiVersion":"2017-04-01",
         "type":"Microsoft.Network/virtualNetworks",
         "name":"[variables('virtualNetworkName')]",
         "location":"[resourceGroup().location]",
         "dependsOn":[  
            "[concat('Microsoft.Network/networkSecurityGroups/', variables('nsgName'))]"
         ],
         "comments":"Virtual Network",
         "properties":{  
            "addressSpace":{  
               "addressPrefixes":[  
                  "10.0.0.0/16"
               ]
            },
            "subnets":[  
               {  
                  "name":"subnet",
                  "properties":{  
                     "addressPrefix":"10.0.0.0/24",
                     "networkSecurityGroup":{  
                        "id":"[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgName'))]"
                     }
                  }
               }
            ]
         }
      },
      {  
         "apiVersion":"2017-04-01",
         "type":"Microsoft.Network/networkInterfaces",
         "name":"[variables('jumpNicName')]",
         "location":"[resourceGroup().location]",
         "comments":"Jump VM nic",
         "dependsOn":[  
            "[concat('Microsoft.Network/publicIPAddresses/', variables('jumpPublicIPAddressName'))]",
            "[concat('Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'))]"
         ],
         "properties":{  
            "ipConfigurations":[  
               {  
                  "name":"ipconfig1",
                  "properties":{  
                     "privateIPAllocationMethod":"Dynamic",
                     "publicIPAddress":{  
                        "id":"[resourceId('Microsoft.Network/publicIPAddresses',variables('jumpPublicIPAddressName'))]"
                     },
                     "subnet":{  
                        "id":"[variables('subnetRef')]"
                     }
                  }
               }
            ]
         }
      },
      {  
         "apiVersion":"2016-03-30",
         "type":"Microsoft.Network/networkInterfaces",
         "name":"[variables('powerBINicName')]",
         "location":"[resourceGroup().location]",
         "comments":"PowerBI VM nic name",
         "dependsOn":[  
            "[concat('Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'))]",
            "[concat('Microsoft.Network/publicIPAddresses/', variables('powerBIPublicIPAddressName'))]"
         ],
         "properties":{  
            "ipConfigurations":[  
               {  
                  "name":"ipconfig1",
                  "properties":{  
                     "privateIPAllocationMethod":"Dynamic",
                     "publicIPAddress":{  
                        "id":"[resourceId('Microsoft.Network/publicIPAddresses',variables('powerBIPublicIPAddressName'))]"
                     },
                     "subnet":{  
                        "id":"[variables('subnetRef')]"
                     }
                  }
               }
            ]
         }
      },
      {  
         "apiVersion":"2017-03-30",
         "type":"Microsoft.Compute/virtualMachines",
         "name":"[parameters('jumpVirtualMachineName')]",
         "location":"[resourceGroup().location]",
         "comments":"Jump VM name",
         "dependsOn":[  
            "[concat('Microsoft.Storage/storageAccounts/', variables('storageAccountName'))]",
            "[concat('Microsoft.Network/networkInterfaces/', variables('jumpNicName'))]"
         ],
         "properties":{  
            "hardwareProfile":{  
               "vmSize":"Standard_D1_V2"
            },
            "osProfile":{  
               "computerName":"[parameters('jumpVirtualMachineName')]",
               "adminUsername":"[parameters('adminUsername')]",
               "adminPassword":"[parameters('adminPassword')]"
            },
            "storageProfile":{  
               "imageReference":{  
                  "publisher":"Canonical",
                  "offer":"UbuntuServer",
                  "sku":"16.04.0-LTS",
                  "version":"latest"
               },
               "osDisk":{  
                  "createOption":"FromImage",
                  "managedDisk":{  
                     "storageAccountType":"Standard_LRS"
                  }
               },
               "networkProfile":{  
                  "networkInterfaces":[  
                     {  
                        "id":"[resourceId('Microsoft.Network/networkInterfaces',variables('jumpNicName'))]"
                     }
                  ]
               }
            }
         }
      },
      {  
         "apiVersion":"2015-06-15",
         "type":"Microsoft.Compute/virtualMachines",
         "name":"[parameters('powerBIVirtualMachineName')]",
         "location":"[resourceGroup().location]",
         "comments":"PowerBI VM",
         "dependsOn":[  
            "[concat('Microsoft.Storage/storageAccounts/', variables('storageAccountName'))]",
            "[concat('Microsoft.Network/networkInterfaces/', variables('powerBINicName'))]"
         ],
         "properties":{  
            "hardwareProfile":{  
               "vmSize":"Standard_A2_v2"
            },
            "osProfile":{  
               "computerName":"[parameters('powerBIVirtualMachineName')]",
               "adminUsername":"[parameters('adminUsername')]",
               "adminPassword":"[parameters('adminPassword')]"
            },
            "storageProfile":{  
               "imageReference":{  
                  "publisher":"MicrosoftWindowsServer",
                  "offer":"WindowsServer",
                  "sku":"2012-R2-Datacenter",
                  "version":"latest"
               },
               "osDisk":{  
                  "createOption":"FromImage",
                  "managedDisk":{  
                     "storageAccountType":"Standard_LRS"
                  }
               },
               "networkProfile":{  
                  "networkInterfaces":[  
                     {  
                        "id":"[resourceId('Microsoft.Network/networkInterfaces',variables('powerBINicName'))]"
                     }
                  ]
               }
            }
         }
      },
      {  
         "type":"Microsoft.Compute/virtualMachines/extensions",
         "name":"[concat(parameters('powerBIVirtualMachineName'),'/install_desktop_client_Extension')]",
         "apiVersion":"2015-06-15",
         "location":"[resourceGroup().location]",
         "dependsOn":[  
            "[concat('Microsoft.Compute/virtualMachines/', parameters('powerBIVirtualMachineName'))]"
         ],
         "tags":{  
            "displayName":"powerBIExtension"
         },
         "properties":{  
            "publisher":"Microsoft.Compute",
            "type":"CustomScriptExtension",
            "typeHandlerVersion":"1.3",
            "autoUpgradeMinorVersion":"true",
            "settings":{  
               "fileUris":[  
                  "https://cosmosdb.blob.core.windows.net/powerbidesktop/Install_Tools.ps1"
               ],
               "commandToExecute":"powershell.exe -ExecutionPolicy Unrestricted -File Install_Tools.ps1"
            }
         }
      }
   ],
   "outputs":{  
      "adminUsername":{  
         "type":"string",
         "value":"[parameters('adminUsername')]"
      },
      "adminPassword":{  
         "type":"string",
         "value":"[parameters('adminPassword')]"
      },
      "jumpPublicIP":{  
         "value":"[reference(resourceId('Microsoft.Network/publicIPAddresses',variables('jumpPublicIPAddressName'))).dnsSettings.fqdn]",
         "type":"string"
      },
      "powerBIPublicIP":{  
         "value":"[reference(resourceId('Microsoft.Network/publicIPAddresses',variables('powerBIPublicIPAddressName'))).dnsSettings.fqdn]",
         "type":"string"
      }
   }
}
